# datacentric_ai_course

./: .gitignore  Notebook_00a-ML Recap - Part 1.ipynb  Notebook_00b-NLP Recap - Part 2.ipynb  Notebook_01.ipynb  Notebook_02.ipynb  Notebook_04.ipynb  Notebook_05.ipynb  README.md  download_datasets_and_binaries.sh  environment.yml  pyproject.toml
.devcontainer/: devcontainer.json
helpers/: classification.py  dataset.py  discriminative.py  generative_model_src.py  influence_functions.py  labelmodels.py  lf.py  multilabel.py  ner.py  semisupervised.py  transformer.py
helpers/explainer/: influence_function.py
