[tool.poetry]
name = "datacentric_ai_course"
version = "0.1.0"
description = ""
authors = ["Elias Jacob <elias.jacob@ufrn.br>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.4.1+cu124", source = "torch"}
torchvision = {version = "^0.19.1+cu124", source = "torch"}
torchaudio = {version = "^2.4.1+cu124", source = "torch"}
skorch = "^1.0.0"
transformers = "^4.45.2"
datasets = "^3.0.1"
tokenizers = "^0.20.0"
accelerate = "^1.0.0"
evaluate = "^0.4.3"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
pandas = "^2.2.3"
ipywidgets = "^8.1.5"
ipykernel = "^6.29.5"
scikit-optimize = "^0.10.2"
sentencepiece = "^0.2.0"
pillow = "^10.4.0"
sentence-transformers = "^3.1.1"
plotly = "^5.24.1"
plotly-express = "^0.4.1"
pgmpy = "^0.1.26"
numba = "^0.60.0"
numbskull = "^0.1.1"
flyingsquid = "^0.0.0a0"
autograd = "^1.7.0"
nltk = "^3.9.1"
umap-learn = "^0.5.6"
snorkel = "^0.10.0"
cleanlab = {extras = ["all"], version = "^2.7.0"}
spacy = "~3.7.5"
hyperlm = "^0.0.5"
seqeval = "^1.2.2"
langchain = "^0.3.2"
langchain-chroma = "^0.1.4"
langchain-experimental = "^0.3.2"
langchain-openai = "^0.2.2"
langchain-community = "^0.3.1"
langchain-ollama = "^0.2.0"
xlrd = "^2.0.1"
gliner = "^0.2.13"
dask = "^2024.9.1"
pydvl = "^0.9.2"
tf-keras = "^2.17.0"
tensorflow = "^2.17.0"
backpack-for-pytorch = "^1.6.0"
lightgbm = "^4.5.0"
xgboost = "^2.1.1"
pulearn = "^0.0.11"
nbformat = "^5.10.4"
pypdf = "^5.0.1"
wordcloud = "^1.9.3"
pyvis = "^0.3.2"
anthropic = "^0.35.0"
pydantic = "^2.9.2"
lightning = "^2.4.0"
torchmetrics = "^1.4.2"
wandb = "^0.18.3"
requests = "^2.32.3"
skweak = "^0.3.3"
distributed = "^2024.9.1"
zarr = "^2.18.3"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
